Update with preliminary modeling

--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,9 @@
     "import seaborn as sns\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "import os\n",
-    "import splitfolders"
+    "import splitfolders\n",
+    "import numpy as np\n",
+    "from keras import models, layers"
    ]
   },
   {
@@ -310,33 +312,6 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1., 0., 0.],\n",
-       "       [0., 1., 0.],\n",
-       "       [0., 0., 1.],\n",
-       "       [1., 0., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [0., 1., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [0., 0., 1.],\n",
-       "       [1., 0., 0.],\n",
-       "       [0., 0., 1.]], dtype=float32)"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -345,22 +320,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_y = np.reshape(train_labels[:,0], (train_batch_size,1))\n",
+    "test_y = np.reshape(test_labels[:,0], (test_batch_size,1))\n",
+    "val_y = np.reshape(val_labels[:,0], (val_batch_size,1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Build cnn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = models.Sequential()\n",
+    "model.add(layers.Conv2D(32, (3, 3), activation='relu',\n",
+    "                        input_shape=(300 ,200,  3)))\n",
+    "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "\n",
+    "model.add(layers.Conv2D(32, (4, 4), activation='relu'))\n",
+    "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "\n",
+    "model.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
+    "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "\n",
+    "model.add(layers.Flatten())\n",
+    "model.add(layers.Dense(64, activation='relu'))\n",
+    "model.add(layers.Dense(1, activation='sigmoid'))\n",
+    "\n",
+    "model.compile(loss='binary_crossentropy',\n",
+    "              optimizer=\"sgd\",\n",
+    "              metrics=['acc'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fit cnn model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(1399, 3)"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/2\n",
+      "44/44 [==============================] - 152s 3s/step - loss: nan - acc: 0.6362 - val_loss: nan - val_acc: 0.6733\n",
+      "Epoch 2/2\n",
+      "44/44 [==============================] - 141s 3s/step - loss: nan - acc: 0.6748 - val_loss: nan - val_acc: 0.6733\n"
+     ]
     }
    ],
    "source": [
-    "train_generator[0][1].shape"
+    "history = model.fit(train_images,\n",
+    "                    train_y,\n",
+    "                    epochs=2,\n",
+    "                    batch_size=32,\n",
+    "                    validation_data=(test_images, test_y))"
    ]
   },
   {
@@ -372,42 +402,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0., 1., 0.],\n",
-       "       [0., 1., 0.],\n",
-       "       [0., 0., 1.],\n",
-       "       [1., 0., 0.],\n",
-       "       [0., 1., 0.],\n",
-       "       [0., 0., 1.],\n",
-       "       [0., 0., 1.],\n",
-       "       [0., 1., 0.],\n",
-       "       [0., 1., 0.],\n",
-       "       [0., 1., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [0., 1., 0.],\n",
-       "       [0., 0., 1.],\n",
-       "       [0., 1., 0.],\n",
-       "       [0., 0., 1.],\n",
-       "       [0., 1., 0.],\n",
-       "       [0., 1., 0.],\n",
-       "       [1., 0., 0.],\n",
-       "       [0., 1., 0.],\n",
-       "       [1., 0., 0.]], dtype=float32)"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_labels[0:20]"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -486,6 +512,215 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.],\n",
+       "       ...,\n",
+       "       [1., 0., 0.],\n",
+       "       [1., 0., 0.],\n",
+       "       [1., 0., 0.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.],\n",
+       "       ...,\n",
+       "       [1., 0., 0.],\n",
+       "       [1., 0., 0.],\n",
+       "       [1., 0., 0.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a, b, c = [1, 2, 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reshape image data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1399, 180000)\n",
+      "(352, 180000)\n",
+      "(437, 180000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_img = train_images.reshape(train_images.shape[0], -1)\n",
+    "test_img = test_images.reshape(test_images.shape[0], -1)\n",
+    "val_img = val_images.reshape(val_images.shape[0], -1)\n",
+    "\n",
+    "\n",
+    "print(train_img.shape)\n",
+    "print(test_img.shape)\n",
+    "print(val_img.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reshape label data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_y = np.reshape(train_labels[:,0], (train_batch_size,1))\n",
+    "test_y = np.reshape(test_labels[:,0], (test_batch_size,1))\n",
+    "val_y = np.reshape(val_labels[:,0], (val_batch_size,1))"
+   ]
   }
  ],
  "metadata": {
